Fix IE layout bugs

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -1253,13 +1253,13 @@ a.more {
     .contact-form-name,
     .contact-form-email {
       width: 50%;
-      padding: 0 20px 0 0;
+      padding: 0;
       display: inline-block;
     }
 
     .contact-form-message {
       width: 100%;
-      padding: 0 20px 0 0;
+      padding: 0;
       margin-top: 30px;
     }
 
