--- a/src/layouts/responsive.scss
+++ b/src/layouts/responsive.scss
@@ -118,7 +118,7 @@
 
   .content {
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
 
     &.no-header main section .page-content {
       margin-top: 100px;
@@ -804,6 +804,9 @@
     section {
       display: block;
       margin: 30px;
+      .footer-links-menu-column {
+        margin: 10px;
+      }
     }
   }
 
@@ -851,7 +854,7 @@
 
   .content {
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
 
     &.no-header main section .page-content {
       margin-top: 100px;
@@ -1462,10 +1465,10 @@
       margin-left: 0;
       margin-right: 0;
 
-
       .section {
         display: block;
-        margin: 60px 20px;
+        margin: 60px 0;
+        padding: 0 20px;
 
         .contact-content {
           display: block;
@@ -1496,7 +1499,7 @@
             .contact-form {
               width: 100%;
 
-              .contact-form-wrapper {
+              > .contact-form-wrapper {
                 .contact-form-name,
                 .contact-form-email {
                   width: 100%;
